Included the JavaScript file externally into the index.html

--- a/JavaScript/JavaScript-Fundamentals-1/index.html
+++ b/JavaScript/JavaScript-Fundamentals-1/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     Welcome to JavaScript Fundamentals
-    <script>
-        console.log('Hi I am JavaScript')
-    </script>
+    <script src="./script.js"></script>
 </body>
 </html>
